[package]
name = "mahjong_server"
version = "0.2.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tungstenite = "0.28"
rand = "0.9"
bevy = { version = "0.17", features = ["dynamic_linking"], optional = true }

[features]
default = ["gui"]
gui = ["bevy"]
gui_dev = []

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
