[package]
name = "mahjong_server"
version = "0.2.0"
edition = "2024"

[workspace]
members = ["crates/*"]

[dependencies]
mahjong_core = { path = "crates/core" }
mahjong_gui = { path = "crates/gui" }

#[features]
#default = ["gui"]
#gui = ["bevy"]
#gui_dev = []

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
