[package]
name = "mahjong_server"
version = "0.2.0"
edition = "2024"

[workspace]
members = ["crates/*"]

[dependencies]
mahjong_core = { path = "crates/core" }
mahjong_gui = { path = "crates/gui", optional = true }
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["gui"]
gui = ["mahjong_gui"]
gui_dev = ["mahjong_gui/dev"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
