[package]
name = "mahjong"
version = "0.1.0"
authors = ["@_P_E_N_T_A"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ws = "0.9.1"
serde = { version = "^1.0.125", features = ["derive"] }
serde_json = "1.0"
rand = "0.7.3"