[package]
name = "mahjong"
version = "0.1.0"
authors = ["@_P_E_N_T_A"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
websocket = "0.26.2"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.3"